--- a/templates/comprar.html
+++ b/templates/comprar.html
@@ -24,7 +24,7 @@
         rel="stylesheet">
 </head>
 
-<body>
+<body id="body">
     <!-- Navbar -->
     <header>
         <nav class="nav">
@@ -69,7 +69,7 @@
             <form>
                 <ul class="compra-timeline">
                     <li>
-                        <button class="compra-timeline-item disabled" aria-disabled="true" tabindex="-1">
+                        <button class="compra-timeline-item disabled">
                             <div class="compra-timeline-item-icon">
                                 <i class="fa-solid fa-check"></i>
                             </div>
@@ -78,7 +78,7 @@
                     </li>
                     <li class="compra-timeline-line"></li>
                     <li>
-                        <button class="compra-timeline-item active">
+                        <button class="compra-timeline-item" id="select-envio">
                             <div class="compra-timeline-item-icon">
                                 <i class="fa-solid fa-truck-fast"></i>
                             </div>
@@ -87,7 +87,7 @@
                     </li>
                     <li class="compra-timeline-line"></li>
                     <li>
-                        <button class="compra-timeline-item" aria-disabled="true" tabindex="-1">
+                        <button class="compra-timeline-item" id="select-pago">
                             <div class="compra-timeline-item-icon">
                                 <i class="fa-regular fa-credit-card"></i>
                             </div>
@@ -95,108 +95,144 @@
                         </button>
                     </li>
                 </ul>
-                <div class="step">
-                    <h2>Datos de contacto</h2>
-                    <div class="step-content">
-                        <input type="email" name="email" class="input-datos-personales" placeholder="Correo electrónico"
-                            required />
-                    </div>
-                </div>
-                <div class="step">
-                    <h2>Entrega</h2>
-                    <div class="step-content input">
-                        <input class="input-datos-personales" id="CP" type="number" placeholder="Código postal"
-                            required />
-                        <span class="link-cp">
-                            <a href="https://www.correoargentino.com.ar/formularios/cpa" target="_blank">Encontrá tu
-                                CP</a>
-                        </span>
-                        <input type="button" class="btn-form" value="Continuar" onclick="codigoPostal();" />
-                    </div>
-                </div>
-                <div class="step hidden" id="step">
-                    <h2>Datos del Destinatario</h2>
-                    <div class="step-content">
-                        <input type="text" name="nombre" class="input-datos-personales" placeholder="Nombre" required />
-                        <input type="text" name="apellido" class="input-datos-personales" placeholder="Apellido"
-                            required />
-                        <input type="text" name="contacto" class="input-datos-personales" placeholder="Teléfono"
-                            required />
-                        <div class="input-datos-personales" id="input-cp"></div>
-                        <input type="text" name="calle" class="input-datos-personales" placeholder="Calle" required />
-                        <input type="text" name="num-calle" class="input-datos-personales" placeholder="Número"
-                            required />
-                        <input type="text" name="dpto" class="input-datos-personales"
-                            placeholder="Departamento (opcional)" />
-                        <input type="text" name="barrio" class="input-datos-personales"
-                            placeholder="Barrio (opcional)" />
-                        <input type="text" name="ciudad" class="input-datos-personales" placeholder="Ciudad" required />
-                    </div>
-                </div>
-                <div class="step hidden facturacion" id="step">
-                    <h2>Datos de Facturacion</h2>
-                    <div class="step-content">
-                        <input type="text" name="dni-cuil" class="input-datos-personales" placeholder="DNI o CUIL"
-                            required />
-                        <div class="datos-facturacion">
-                            <input type="checkbox" name="checkbox" id="datos-facturacion" checked>
-                            <label for="checkbox">Mis datos de facturación y entrega son<br>los mismos</label>
+                <div id="datos-de-compra">
+                    <!-- Correo de contacto -->
+                    <div class="step">
+                        <h2>Datos de contacto</h2>
+                        <div class="step-content">
+                            <input type="email" id="email-comprador" name="email" class="input-datos-personales"
+                                placeholder="Correo electrónico" required />
                         </div>
                     </div>
-                    <div class="step-content hidden datos-abono">
-                        <h5>Persona que pagará el pedido</h5>
-                        <input type="text" name="nombre-abono" class="input-datos-personales" placeholder="Nombre"
-                            required />
-                        <input type="text" name="apellido-abono" class="input-datos-personales" placeholder="Apellido"
-                            required />
-                        <input type="text" name="telefono-abono" class="input-datos-personales" placeholder="Telefono"
-                            required />
-                        <input type="text" name="calle-abono" class="input-datos-personales" placeholder="Calle"
-                            required />
-                        <input type="text" name="num-calle-abono" class="input-datos-personales" placeholder="Número"
-                            required />
-                        <input type="text" name="dpto-abono" class="input-datos-personales"
-                            placeholder="Departamento (opcional)" />
-                        <input type="text" name="barrio-abono" class="input-datos-personales"
-                            placeholder="Barrio (opcional)" />
+                    <!-- Codigo Postal de Entrega -->
+                    <div class="step">
+                        <h2>Entrega</h2>
                         <div class="step-content input">
-                            <input class="input-datos-personales" id="cp-abono" type="number"
-                                placeholder="Código postal" required />
+                            <input class="input-datos-personales" id="CP" type="number" placeholder="Código postal"
+                                required />
                             <span class="link-cp">
                                 <a href="https://www.correoargentino.com.ar/formularios/cpa" target="_blank">Encontrá tu
                                     CP</a>
                             </span>
-                        </div>
-                        <div class="provincias">
-                            <label for="provincia">Provincia</label>
-                            <select name="provincia" id="">
-                                <option value="caba">Ciudad Autónoma de Buenos Aires</option>
-                                <option value="bsas">Buenos Aires</option>
-                                <option value="catamarca">Catamarca</option>
-                                <option value="Chaco">Chaco</option>
-                                <option value="Chubut">Chubut</option>
-                                <option value="Córdoba">Córdoba</option>
-                                <option value="Corrientes">Corrientes</option>
-                                <option value="Entre Ríos">Entre Ríos</option>
-                                <option value="Formosa">Formosa</option>
-                                <option value="Jujuy">Jujuy</option>
-                                <option value="La Pampa">La Pampa</option>
-                                <option value="La Rioja">La Rioja</option>
-                                <option value="Mendoza">Mendoza</option>
-                                <option value="Misiones">Misiones</option>
-                                <option value="Neuquen">Neuquen</option>
-                                <option value="Río Negro">Río Negro</option>
-                                <option value="Salta">Salta</option>
-                                <option value="San Juan">San Juan</option>
-                                <option value="San Luís">San Luís</option>
-                                <option value="Santa Cruz">Santa Cruz</option>
-                                <option value="Santiago del Estero">Santiago del Estero</option>
-                                <option value="Tierra del Fuego">Tierra del Fuego</option>
-                                <option value="Tucumán">Tucumán</option>
-                            </select>
+                            <input type="button" class="btn-form" value="Continuar" id="btn-continuar"
+                                onclick="validar();" />
                         </div>
                     </div>
-                    <input type="button" class="btn-form" value="Continuar con el Pago" onclick="refresh();" />
+                    <!-- Datos de envio -->
+                    <div class="step hidden" id="destino">
+                        <h2>Datos de Entrega</h2>
+                        <div class="step-content">
+                            <select name="envio" id="envio" class="select-entrega" onchange="entregaElegida();">
+                                <option value="default" selected>Seleccione método de entrega</option>
+                                <option value="envio">Envío a domicilio</option>
+                                <option value="retiro">Retiro - Morón, Bs As.</option>
+                                <option value="encuentro">Encuentro - Est. Morón</option>
+                            </select>
+                            <input type="text" id="name-user" name="nombre" class="input-datos-personales" placeholder="Nombre"
+                                required />
+                            <input type="text" id="lastname-user" name="apellido" class="input-datos-personales" placeholder="Apellido"
+                                required />
+                            <input type="text" id="tel-user" name="contacto" class="input-datos-personales" placeholder="Teléfono"
+                                required />
+                            <!-- Muestra el CP indicado -->
+                            <div class="input-datos-personales hidden" id="input-cp"></div>
+                            <!-- Muestra el método de entrega seleccionado -->
+                            <div class="input-datos-personales hidden" id="envio-seleccionado"></div>
+                            <!-- Form de datos de envio -->
+                            <div class="datos-envio hidden" id="datos-despacho"></div>
+                        </div>
+                    </div>
+                    <!-- Datos de pago, en caso de que no abone quien reciba -->
+                    <div class="step hidden facturacion" id="facturacion">
+                        <h2>Datos de Facturacion</h2>
+                        <div class="step-content">
+                            <input type="text" name="dni-cuil" class="input-datos-personales" placeholder="DNI o CUIL"
+                                required />
+                            <div class="datos-facturacion">
+                                <input type="checkbox" name="checkbox" id="datos-facturacion" checked>
+                                <label for="checkbox">Mis datos de facturación y entrega son<br>los mismos</label>
+                            </div>
+                        </div>
+                        <div class="step-content hidden datos-abono">
+                            <h5>Persona que pagará el pedido</h5>
+                            <input type="text" name="nombre-abono" class="input-datos-personales" placeholder="Nombre"
+                                required />
+                            <input type="text" name="apellido-abono" class="input-datos-personales"
+                                placeholder="Apellido" required />
+                            <input type="text" name="telefono-abono" class="input-datos-personales"
+                                placeholder="Telefono" required />
+                            <input type="text" name="calle-abono" class="input-datos-personales" placeholder="Calle"
+                                required />
+                            <input type="text" name="num-calle-abono" class="input-datos-personales"
+                                placeholder="Número" required />
+                            <input type="text" name="dpto-abono" class="input-datos-personales"
+                                placeholder="Departamento (opcional)" />
+                            <input type="text" name="barrio-abono" class="input-datos-personales"
+                                placeholder="Barrio (opcional)" />
+                            <div class="step-content input">
+                                <input class="input-datos-personales" id="cp-abono" type="number"
+                                    placeholder="Código postal" required />
+                                <span class="link-cp">
+                                    <a href="https://www.correoargentino.com.ar/formularios/cpa"
+                                        target="_blank">Encontrá tu
+                                        CP</a>
+                                </span>
+                            </div>
+                            <div class="provincias">
+                                <label for="provincia">Provincia</label>
+                                <select name="provincia" id="">
+                                    <option value="caba">Ciudad Autónoma de Buenos Aires</option>
+                                    <option value="bsas">Buenos Aires</option>
+                                    <option value="catamarca">Catamarca</option>
+                                    <option value="Chaco">Chaco</option>
+                                    <option value="Chubut">Chubut</option>
+                                    <option value="Córdoba">Córdoba</option>
+                                    <option value="Corrientes">Corrientes</option>
+                                    <option value="Entre Ríos">Entre Ríos</option>
+                                    <option value="Formosa">Formosa</option>
+                                    <option value="Jujuy">Jujuy</option>
+                                    <option value="La Pampa">La Pampa</option>
+                                    <option value="La Rioja">La Rioja</option>
+                                    <option value="Mendoza">Mendoza</option>
+                                    <option value="Misiones">Misiones</option>
+                                    <option value="Neuquen">Neuquen</option>
+                                    <option value="Río Negro">Río Negro</option>
+                                    <option value="Salta">Salta</option>
+                                    <option value="San Juan">San Juan</option>
+                                    <option value="San Luís">San Luís</option>
+                                    <option value="Santa Cruz">Santa Cruz</option>
+                                    <option value="Santiago del Estero">Santiago del Estero</option>
+                                    <option value="Tierra del Fuego">Tierra del Fuego</option>
+                                    <option value="Tucumán">Tucumán</option>
+                                </select>
+                            </div>
+                        </div>
+                        <input type="button" class="btn-form" value="Continuar con el Pago" onclick="validarDatos();" />
+                    </div>
+                </div>
+                <div id="datos-de-pago" class="hidden">
+                    <div class="cod-descuento">
+                        <i class="fa-solid fa-ticket"></i>
+                        <input type="button" value="Agregar cupón de Descuento" onclick="addDto();">
+                        <div class="step-content input hidden" id="dto-label">
+                            <input name="descuento" class="dto-label" type="text" placeholder="Ingrese su código"
+                                required />
+                            <input type="button" value="Validar" class="validar-btn" onclick="validarDto();"/>
+                        </div>
+                    </div>
+                    <div class="step">
+                        <div class="step-content correo">
+                            <i class="fa-solid fa-envelope"></i>
+                            <span id="correo-compra"></span>
+                        </div>
+                    </div>
+                    <div class="step-user">
+                        <div class="step-content user">
+                            <i class="fa-solid fa-user"></i>
+                            <div class="step-content user-datos" id="user-datos"></div>
+                        </div>
+                    </div>
+                    <div class="step-envio hidden"></div>
                 </div>
             </form>
         </section>
