--- a/templates/tienda.html
+++ b/templates/tienda.html
@@ -38,7 +38,7 @@
                 <li><a href="#">Tienda</a></li>
                 <li><a href="./contact.html">Contactanos</a></li>
                 <li><a href="./address.html">Dónde Encontrarnos</a></li>
-                <li><a href="">Ingresar</a></li>
+                <!-- <li><a href="">Ingresar</a></li> -->
             </ul>
             <div>
                 <!-- Lupita -->
