--- a/static/css/tienda.css
+++ b/static/css/tienda.css
@@ -477,6 +477,7 @@ label img {
 
     font-size: 1.5em;
     color: var(--third-color);
+    cursor: pointer;
 }
 
 .shopping-cart {
@@ -605,6 +606,7 @@ label img {
     border: 1px solid rgb(173, 173, 173);
     border-radius: .5em;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
 }
 
 .less-cantidad,
@@ -615,6 +617,7 @@ label img {
     text-align: center;
     font-size: .6em;
     color: var(--bg-dark);
+    cursor: pointer;
 }
 
 .titulo-producto-carrito {
@@ -841,6 +844,7 @@ label img {
     color: var(--bg-dark);
     border: none;
     border-radius: .5em;
+    cursor: pointer;
 
     transition: all 0.3s ease-in;
 }
