--- a/templates/comprar.html
+++ b/templates/comprar.html
@@ -104,15 +104,14 @@
                         <h2>Datos de contacto</h2>
                         <div class="step-content">
                             <input type="email" id="email-comprador" name="email" class="input-datos-personales"
-                                placeholder="Correo electrónico" required />
+                                placeholder="Correo electrónico" />
                         </div>
                     </div>
                     <!-- Codigo Postal de Entrega -->
                     <div class="step">
                         <h2>Entrega</h2>
                         <div class="step-content input">
-                            <input class="input-datos-personales" id="CP" type="number" placeholder="Código postal"
-                                required />
+                            <input class="input-datos-personales" id="CP" type="number" placeholder="Código postal" />
                             <span class="link-cp">
                                 <a href="https://www.correoargentino.com.ar/formularios/cpa" target="_blank">Encontrá tu
                                     CP</a>
@@ -134,11 +133,11 @@
                             </select>
                             <!-- Datos personales de quien Recibe -->
                             <input type="text" id="name-user" name="nombre" class="input-datos-personales"
-                                placeholder="Nombre" required />
+                                placeholder="Nombre" />
                             <input type="text" id="lastname-user" name="apellido" class="input-datos-personales"
-                                placeholder="Apellido" required />
+                                placeholder="Apellido" />
                             <input type="text" id="tel-user" name="contacto" class="input-datos-personales"
-                                placeholder="Ej. 1125361425" required />
+                                placeholder="Ej. 1125361425" />
                             <!-- Muestra el CP indicado -->
                             <div class="input-datos-personales hidden" id="input-cp"></div>
                             <!-- Muestra el método de entrega seleccionado -->
@@ -153,7 +152,7 @@
                         <!-- DNI o CUIL de quien recibe y abona -->
                         <div class="step-content">
                             <input type="text" id="dniCuil" name="dni-cuil" class="input-datos-personales"
-                                placeholder="DNI o CUIL" required />
+                                placeholder="DNI o CUIL" />
                             <div class="datos-facturacion">
                                 <input type="checkbox" name="checkbox" id="datos-facturacion" checked>
                                 <label for="checkbox">Mis datos de facturación y entrega son<br>los mismos</label>
@@ -162,23 +161,22 @@
                         <!-- Datos de quien abona, en caso de no ser quien reciba -->
                         <div class="step-content hidden datos-abono">
                             <h5>Persona que pagará el pedido</h5>
-                            <input type="text" name="nombre-abono" class="input-datos-personales" placeholder="Nombre"
-                                required />
+                            <input type="text" name="nombre-abono" class="input-datos-personales"
+                                placeholder="Nombre" />
                             <input type="text" name="apellido-abono" class="input-datos-personales"
-                                placeholder="Apellido" required />
+                                placeholder="Apellido" />
                             <input type="text" name="telefono-abono" class="input-datos-personales"
-                                placeholder="Telefono" required />
-                            <input type="text" name="calle-abono" class="input-datos-personales" placeholder="Calle"
-                                required />
+                                placeholder="Telefono" />
+                            <input type="text" name="calle-abono" class="input-datos-personales" placeholder="Calle" />
                             <input type="text" name="num-calle-abono" class="input-datos-personales"
-                                placeholder="Número" required />
+                                placeholder="Número" />
                             <input type="text" name="dpto-abono" class="input-datos-personales"
                                 placeholder="Departamento (opcional)" />
                             <input type="text" name="barrio-abono" class="input-datos-personales"
                                 placeholder="Barrio (opcional)" />
                             <div class="step-content input">
                                 <input class="input-datos-personales" id="cp-abono" type="number"
-                                    placeholder="Código postal" required />
+                                    placeholder="Código postal" />
                                 <span class="link-cp">
                                     <a href="https://www.correoargentino.com.ar/formularios/cpa"
                                         target="_blank">Encontrá tu
@@ -224,7 +222,7 @@
                         <input type="button" id="descuento" value="Agregar cupón de Descuento" />
                         <div class="step-content input hidden" id="dto-label">
                             <input name="descuento" id="input-dto" class="dto-label" type="text"
-                                placeholder="Ingrese su código" required />
+                                placeholder="Ingrese su código" />
                             <input type="button" id="validar-dto" value="Validar" class="validar-btn" />
                         </div>
                     </div>
@@ -249,29 +247,55 @@
                     <div class="step-envio">
                         <div class="step-content notas">
                             <i class="fa-solid fa-comments"></i>
-                            <div class="step-content nota" id="notas"></div>
+                            <div class="step-content nota" id="notas">
+                                <div>
+                                    <span>Notas de pedido</span>
+                                    <div id="nota" class="hidden">
+                                        <textarea id="nota-pedido" name="nota-pedido"></textarea>
+                                    </div>
+                                </div>
+                                <div id="btn-nota-add" class="link-datos">Agregar</div>
+                                <div id="btn-nota-remove" class="link-datos hidden">Quitar</div>
+                            </div>
                         </div>
                     </div>
                     <div class="step">
                         <div class="step-content" id="step-pago">
                             <h4>Medios de Pago</h4>
-                            <ul>
+                            <ul id="metodos">
                                 <li>
-                                    <i class="fa-regular fa-money-bill-1"></i>
-                                     Efectivo
-                                     <i class="fa-solid fa-angle-right icon-pago"></i>
-                                    </li>
-                                <li>
-                                    <i class="fa-solid fa-credit-card"></i>
-                                     Tranferencia Bancaria 
-                                    <i class="fa-solid fa-angle-right icon-pago"></i>
+                                    <div>
+                                        <i class="fa-regular fa-money-bill-1"></i> Efectivo
+                                    </div>
+                                    <i class="fa-solid fa-angle-right icon-pago" id="btn-efectivo"></i>
                                 </li>
                                 <li>
-                                    <img src="../static/img/mp.png" alt="Logo Mercado Pago">
-                                    MercadoPago 
-                                    <i class="fa-solid fa-angle-right icon-pago"></i>
+                                    <div>
+                                        <i class="fa-solid fa-credit-card"></i> Tranferencia Bancaria
+                                    </div>
+                                    <i class="fa-solid fa-angle-right icon-pago" id="btn-transferencia"></i>
+                                </li>
+                                <li>
+                                    <div>
+                                        <img src="../static/img/mp.png" alt="Logo Mercado Pago"> MercadoPago
+                                    </div>
+                                    <i class="fa-solid fa-angle-right icon-pago" id="btn-mp"></i>
                                 </li>
                             </ul>
+                            <div class="descripcion">
+                                <div class="step-pago hidden" id="label-efectivo">
+                                    <span id="lbl-efectivo-back">volver</span>
+                                    Contenido del div Efectivo
+                                </div>
+                                <div class="step-pago hidden" id="label-transferencia">
+                                    <span id="lbl-transferencia-back">volver</span>
+                                    Contenido del div Tranferencia
+                                </div>
+                                <div class="step-pago hidden" id="label-mp">
+                                    <span id="lbl-mp-back">volver</span>
+                                    Contenido del div MercadoPago
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
